[package]
name = "file_system"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[features]
bcc-iosnoop = ["bcc"]

[dependencies]
collections = { git = "https://github.com/tikv/tikv", tag = "v8.5.0", package = "collections" }
crossbeam-utils = "0.8"
online_config = { git = "https://github.com/tikv/tikv", tag = "v8.5.0", package = "online_config" }
# openssl = { workspace = true }
tikv_alloc = { git = "https://github.com/tikv/tikv", tag = "v8.5.0", package = "tikv_alloc" }
tikv_util = { git = "https://github.com/tikv/tikv", tag = "v8.5.0", package = "tikv_util" }

chrono = "0.4"
crc32fast = "1.2"
fs2 = "0.4"
lazy_static = "1.3"
libc = "0.2"
parking_lot = "0.12"
prometheus = { version = "0.13", features = ["nightly"] }
prometheus-static-metric = "0.5"
rand = "0.8"
serde = "1.0"
strum = { version = "0.20", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }

[dev-dependencies]
tempfile = "3.0"

[target.'cfg(target_os = "linux")'.dependencies]
bcc = { version = "0.0.30", optional = true }
thread_local = "1.1.3"

# Copy of tikv's to fix the compile error
[patch.crates-io]
raft = { git = "https://github.com/tikv/raft-rs", branch = "master" }
raft-proto = { git = "https://github.com/tikv/raft-rs", branch = "master" }
protobuf = { git = "https://github.com/pingcap/rust-protobuf", branch = "v2.8" }
protobuf-codegen = { git = "https://github.com/pingcap/rust-protobuf", branch = "v2.8" }
